--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,14 @@
 .completedTodos{
   color: green;
 }
+
 .todos{
   display: flex;
-  gap: 20px;
+
+}
+.todo{
+  border: 2px solid blue;
+  margin: 20px
 }
 #errorMessage{
   color: red;
