--- a/src/todos.css
+++ b/src/todos.css
@@ -32,7 +32,7 @@ main {
   padding: 0;
 }
 
-.todo{
+.todo, .edit-section{
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -42,6 +42,9 @@ main {
   background-color: #eef2f7;
   border: 2px solid #eceff2;
   box-shadow: black;
+}
+.edit-section{
+  margin-top: 50px;
 }
 #errorMessage{
   color: red;
