--- a/src/styles.css
+++ b/src/styles.css
@@ -53,8 +53,6 @@ main {
     
 }
 
-
-
 .quote {
   /* display: flex;
   justify-content: center; */
@@ -72,8 +70,7 @@ main {
     align-items: center;
     justify-content: space-evenly;
     gap: 270px;
-    min-height: 50px;
-    
+    min-height: 50px; 
 }
 
 .logo-container {
@@ -81,10 +78,9 @@ main {
   align-items: start;
   margin: 10px;
   border-radius: 10px;
-  width: 70px
-  
-  
+  width: 70px;
 }
+
 .btn-container {
   display: flex;
 }
@@ -122,6 +118,7 @@ header{
     justify-content: center;
     align-items: center;
 }
+
 nav{
     display: flex;
     align-items: center;
@@ -145,6 +142,20 @@ button {
     cursor: pointer;
     transition: background-color 0.3s;
   }
+
+  ul {
+    list-style-type: none; 
+    padding-left: 0; 
+  }
+  
+  ol {
+    list-style-type: none;
+    padding-left: 0; 
+  }
+
+  .link-style {
+    color: rgb(132, 20, 144);
+  }
   
   button:hover {
     background-color: #c2c8cf;
@@ -161,13 +172,5 @@ button {
     }
   }
 
-  ul {
-    list-style-type: none; 
-    padding-left: 0; 
-  }
-  
-  ol {
-    list-style-type: none;
-    padding-left: 0; 
-  }
+ 
   
