--- a/src/styles.css
+++ b/src/styles.css
@@ -85,6 +85,26 @@ main {
   display: flex;
 }
 
+.home-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+ 
+}
+
+.log-in-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 15px;
+}
+.input-login-container {
+  display: flex;
+  
+}
+
 a {
   color: #161718;
   text-decoration: none;
