--- a/src/styles.css
+++ b/src/styles.css
@@ -107,8 +107,12 @@ flex-direction: column;
 margin: 0px;
 padding: 0px;  
 }
-label {
+.log-in-container label {
   font-weight: bold;
+  font-size: 14px;
+}
+.log-in-container input {
+  font-size: 12px;
 }
 
 a {
